tests/parser/tests/cases/should_fail/expresionless_directive/case.hash
// This directive does not have an expression
k := #dump;
