tests/parser/tests/cases/should_fail/expresionless_directive/case.stderr
error: failed to parse
 --> $DIR/case.hash:2:11
1 |   // This directive does not have an expression
2 |   k := #dump;
  |             ^ here
  = note: expected an expression, however received a `;`.
